# unique-codes-generator

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go  requirements.txt
.github/workflows/: release.yml
clients/python/: README.md  build.sh  example.py  generator_pb2.pyi  pyproject.toml  requirements.txt
clients/python/src/ucg_client/: .gitignore  __init__.py  _version.py  generator_pb2.py  generator_pb2_grpc.py
generator/: generator.go  generator.pb.go  generator_grpc.pb.go  generator_test.go
protos/: generator.proto
scripts/: gen-code.sh  gen-py-client.sh  run-server.sh  setup-secrets.sh
server/: server.go
